--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,23 @@ html {
 } 
 
 body {
-
+    height: 100%;
 }
 
 h1 {
     font-size: 64px;
+    font-family: monospace;
+    color: white;
 }
 
 .main-container {
+    width: 100%;
+    height: 95vh;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .buzzer {
